removed code mirror and materialize, added semantic as a native react app. This breaks some existing styling, so some refactoring will need to be done on the existing pages

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,28 +1,17 @@
 <!doctype html>
 <html lang="en">
-<<<<<<< HEAD
 
 <head>
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/framework/materialize/materialize.min.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <!--
-=======
-  <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
->>>>>>> a2ceb1458aae6c0ffc8632f44a480aa831c4ab8c
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <script src="%PUBLIC_URL%/assets/js/codemirror.js"></script>
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/codemirror.css">
-  <script src="%PUBLIC_URL%/assets/javascript/javascript.js"></script>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
